# tic-tac-toe

./: .gitignore  tictactoe.cabal
src/: Lib.hs  Main.hs  TicTacToe.hs
tst/unit/: TicTacToeSpec.hs
