name:                tictactoe
version:             0.1.0.0
synopsis:            Very simple version of tic-tac-toe
description:         See synopsis
homepage:            https://github.com/githubuser/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              Albert Chapman-Layland
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tictactoe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , random
    , transformers
  other-modules:       TicTacToe
library
  exposed-modules:      TicTacToe
  build-depends:        base >= 4.7 && < 5
                        , random
                        , transformers
  hs-source-dirs:       src
  default-language:     Haskell2010
test-suite unit-tests
  default-language:     Haskell2010
  build-depends:        base
                        , hspec
                        , tictactoe
  main-is:              Spec.hs
  hs-source-dirs:       tst/unit
  type:                 exitcode-stdio-1.0
  build-tool-depends:   hspec-discover:hspec-discover == 2.*
  other-modules:        TicTacToeSpec
